Add mit_type field which distinguishes text from image

--- a/textimagexblock/static/html/studio_view.html
+++ b/textimagexblock/static/html/studio_view.html
@@ -7,6 +7,17 @@
       </div>
       <span class="tip setting-help">Example: My text/image block</span>
     </li>
+
+    <li class="field comp-setting-entry is-set">
+      <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="mit_type">XBlock Type</label>
+        <select class="input setting-input" name="mit_type" id="mit_type" value="{mit_type}">
+          <option value="text">Text</option>
+          <option value="image">Image</option>
+        </select>
+      </div>
+    </li>
+
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
         <label class="label setting-label" for="background_url">Background URL</label>
@@ -47,4 +58,3 @@
     </ul>
   </div>
 </div>
-
