--- a/textimagexblock/static/html/studio_view.html
+++ b/textimagexblock/static/html/studio_view.html
@@ -25,13 +25,14 @@
       </div>
       <span class="tip setting-help">URL of the background image.</span>
     </li>
+
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
         <label class="label setting-label" for="text_color">Text color</label>
-        <input class="input setting-input" name="text_color" id="text_color" value="{text_color}" type="colorpicker" />
+        <input class="input setting-input" name="text_color" id="text_color" value="{text_color}" type="color" style="height: 40px;" />
       </div>
-      <span class="tip setting-help">Text color hex value.</span>
     </li>
+
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
         <label class="label setting-label" for="header_text">Header text</label>
@@ -39,6 +40,7 @@
       </div>
       <span class="tip setting-help">Text that will show in header.</span>
     </li>
+
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
         <label class="label setting-label" for="content_text">Content text</label>
