Add display_description and thumbnail_url

--- a/textimagexblock/static/html/studio_view.html
+++ b/textimagexblock/static/html/studio_view.html
@@ -10,6 +10,22 @@
 
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="display_description">XBlock Description</label>
+        <input class="input setting-input" name="display_description" id="display_description" value="{display_description}" type="text" />
+      </div>
+      <span class="tip setting-help">Example: Description of this block</span>
+    </li>
+
+    <li class="field comp-setting-entry is-set">
+      <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="thumbnail_url">Thumbnail URL</label>
+        <input class="input setting-input" name="thumbnail_url" id="thumbnail_url" value="{thumbnail_url}" type="text" />
+      </div>
+      <span class="tip setting-help">URL of the thumbnail image</span>
+    </li>
+
+    <li class="field comp-setting-entry is-set">
+      <div class="wrapper-comp-setting">
         <label class="label setting-label" for="mit_type">XBlock Type</label>
         <select class="input setting-input" name="mit_type" id="mit_type" value="{mit_type}">
           <option value="text">Text</option>
@@ -23,7 +39,7 @@
         <label class="label setting-label" for="background">Background Image</label>
         <input class="input setting-input" name="background" id="background" type="file" />
       </div>
-      <span class="tip setting-help">File for the background image.</span>
+      <span class="tip setting-help">File for the background image</span>
     </li>
 
     <li class="field comp-setting-entry is-set">
@@ -38,7 +54,7 @@
         <label class="label setting-label" for="header_text">Header text</label>
         <input class="input setting-input" name="header_text" id="header_text" value="{header_text}" type="text" />
       </div>
-      <span class="tip setting-help">Text that will show in header.</span>
+      <span class="tip setting-help">Text that will show in header</span>
     </li>
 
     <li class="field comp-setting-entry is-set">
@@ -46,7 +62,7 @@
         <label class="label setting-label" for="content_text">Content text</label>
         <textarea class="input setting-input" name="content_text" id="content_text" type="text">{content_text}</textarea>
       </div>
-      <span class="tip setting-help">Text that will show in paragraph.</span>
+      <span class="tip setting-help">Text that will show in paragraph</span>
     </li>
   </ul>
   <div class="xblock-actions">
