--- a/textimagexblock/static/html/studio_view.html
+++ b/textimagexblock/static/html/studio_view.html
@@ -18,8 +18,16 @@
 
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="thumbnail">Thumbnail</label>
+        <input class="input setting-input" name="thumbnail" id="thumbnail" type="file" />
+      </div>
+      <span class="tip setting-help">Upload a thumbnail image</span>
+    </li>
+
+    <li class="field comp-setting-entry is-set">
+      <div class="wrapper-comp-setting">
         <label class="label setting-label" for="thumbnail_url">Thumbnail URL</label>
-        <input class="input setting-input" name="thumbnail_url" id="thumbnail_url" value="{thumbnail_url}" type="text" />
+        <input class="input setting-input" name="thumbnail_url" id="thumbnail_url" value="{thumbnail_url}" type="text" readonly />
       </div>
       <span class="tip setting-help">URL of the thumbnail image</span>
     </li>
