Changed xblock title and desc to media title and desc

--- a/textimagexblock/static/html/studio_view.html
+++ b/textimagexblock/static/html/studio_view.html
@@ -2,7 +2,7 @@
   <ul class="list-input settings-list">
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
-        <label class="label setting-label" for="display_name">XBlock Name</label>
+        <label class="label setting-label" for="display_name">Media Title</label>
         <input class="input setting-input" name="display_name" id="display_name" value="{display_name}" type="text" />
       </div>
       <span class="tip setting-help">Example: My text/image block</span>
@@ -10,7 +10,7 @@
 
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
-        <label class="label setting-label" for="display_description">XBlock Description</label>
+        <label class="label setting-label" for="display_description">Media Description</label>
         <input class="input setting-input" name="display_description" id="display_description" value="{display_description}" type="text" />
       </div>
       <span class="tip setting-help">Example: Description of this block</span>
